--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -116,6 +116,30 @@ set timestamp when I mark task DONE
 #+begin_src emacs-lisp :tangle yes
 (setq org-log-done "time")
 #+end_src
+
+Manually clock in - sometimes I'm using Pomodoro outside of emacs
+#+begin_src emacs-lisp :tangle yes
+(defun my/insert-custom-clock-entry ()
+  (interactive)
+  (insert "CLOCK: ")
+  (org-time-stamp-inactive)
+  (insert "--")
+  ;; Inserts the current time by default.
+  (let ((current-prefix-arg '(4))) (call-interactively 'org-time-stamp-inactive))
+  (org-ctrl-c-ctrl-c))
+#+end_src
+
+Don't show org files with 0 clocked time in agenda
+#+begin_src emacs-lisp :tangle yes
+(setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 2 :fileskip0 t))
+#+end_src(map! :map org-mode-map
+
+#+begin_src emacs-lisp :tangle yes
+(map! :map org-mode-map
+      :localleader
+      (:prefix ("c" . "clock")
+       :desc "Insert past clock" "p" #'org-insert-past-clock))
+#+end_src(map! :map org-mode-map
 *** org-super-agenda
 #+begin_src emacs-lisp :tangle yes
 (org-super-agenda-mode)
