--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -104,42 +104,24 @@ More habits
 (setq org-log-into-drawer "LOGBOOK")
 #+end_src
 
-ical file to export my org stuff to
-#+begin_src emacs-lisp :tangle yes
-(setq org-icalendar-combined-agenda-file "~/git/space/org/calendar.ics")
-;; (setq org-icalendar-include-todo t)
-;; (setq org-icalendar-use-scheduled (event-if-todo event-if-not-todo))
-;; (setq org-icalendar-use-deadline (event-if-todo event-if-not-todo))
-#+end_src
-
 set timestamp when I mark task DONE
 #+begin_src emacs-lisp :tangle yes
 (setq org-log-done "time")
 #+end_src
 
-Manually clock in - sometimes I'm using Pomodoro outside of emacs
-#+begin_src emacs-lisp :tangle yes
-(defun my/insert-custom-clock-entry ()
-  (interactive)
-  (insert "CLOCK: ")
-  (org-time-stamp-inactive)
-  (insert "--")
-  ;; Inserts the current time by default.
-  (let ((current-prefix-arg '(4))) (call-interactively 'org-time-stamp-inactive))
-  (org-ctrl-c-ctrl-c))
-#+end_src
-
 Don't show org files with 0 clocked time in agenda
 #+begin_src emacs-lisp :tangle yes
 (setq org-agenda-clockreport-parameter-plist '(:stepskip0 t :link t :maxlevel 2 :fileskip0 t))
-#+end_src(map! :map org-mode-map
+#+end_src
 
+Manually clock in - sometimes I'm using Pomodoro outside of emacs
 #+begin_src emacs-lisp :tangle yes
 (map! :map org-mode-map
       :localleader
       (:prefix ("c" . "clock")
        :desc "Insert past clock" "p" #'org-insert-past-clock))
-#+end_src(map! :map org-mode-map
+#+end_src
+
 *** org-super-agenda
 #+begin_src emacs-lisp :tangle yes
 (org-super-agenda-mode)
@@ -159,6 +141,10 @@ For some reason super-agenda shows overdue items as 'other items'
 (setq org-super-agenda-unmatched-name "🔥overdue🔥")
 #+end_src
 
+Align tags
+#+begin_src emacs-lisp :tangle yes
+(setq org-tags-column -80)
+#+end_src
 Custom agenda view for super agenda
 #+begin_src emacs-lisp :tangle yes
 (setq org-agenda-custom-commands
@@ -196,7 +182,7 @@ Custom agenda view for super agenda
 
 ** org roam
 #+begin_src emacs-lisp :tangle yes
-(setq org-roam-directory "~/git/space/")
+(setq org-roam-directory "~/git/space/brain")
 #+end_src
 
 For better export
@@ -220,7 +206,27 @@ https://github.com/org-roam/org-roam-ui
 #+end_src
 
 ** calendar
-Custom function to view org calendar + calendars from iCalendar
+ical file to export my org stuff to
+#+begin_src emacs-lisp :tangle yes
+(setq org-icalendar-combined-agenda-file "~/git/space/org/calendar/all.ics")
+(setq org-icalendar-include-todo t)
+;; (setq org-icalendar-use-scheduled (event-if-todo event-if-not-todo))
+;; (setq org-icalendar-use-deadline (event-if-todo event-if-not-todo))
+#+end_src
+
+I use org-caldav to sync my org stuff with Nextcloud calendar
+#+begin_src emacs-lisp :tangle yes
+(after! org
+  (setq org-caldav-url "https://cloud.testchamber.one/remote.php/dav/calendars/wunder")
+  (setq org-caldav-calendar-id "org")
+  (setq org-caldav-inbox "~/git/space/org/calendar/ical.org")
+  (setq org-caldav-files (directory-files "~/git/space/org" t "\\.org$"))
+  (setq org-icalendar-timezone "Europe/Moscow")
+  )
+(setq auth-sources '("~/.auth"))
+#+end_src
+
+Custom function to view org calendar + icals
 https://cyberchris.xyz/posts/ical-doom-emacs/
 #+begin_src emacs-lisp :tangle yes
 (defun calendar-helper () ;; doesn't have to be interactive
@@ -264,21 +270,26 @@ Disable default holidays
 #+end_src
 
 ** journaling
-I use org-journal and org-roam-dailies in the same directory
+I use org-journal
 #+begin_src emacs-lisp :tangle yes
 (after! org
   (setq org-journal-file-format "%Y-%m-%d.org")
   (setq org-journal-date-format "%Y-%m-%d")
-  ;; (add-to-list 'org-agenda-files org-journal-dir)
-  ;; (setq org-journal-enable-agenda-integration t)
+#+end_src
 
-  (setq org-roam-dailies-directory "journal/")
-  (setq org-roam-dailies-capture-templates
-        '(("d" "default" entry
-           "* %<%H:%M> %?"
-           :target (file+head "%<%Y-%m-%d>.org"
-                              "#+title: %<%Y-%m-%d>\n"))))
-  )
+Create org-capture template for org-journal
+#+begin_src emacs-lisp :tangle yes
+(defun org-journal-find-location ()
+  ;; Open today's journal, but specify a non-nil prefix argument in order to
+  ;; inhibit inserting the heading; org-capture will insert the heading.
+  (org-journal-new-entry t)
+  (unless (eq org-journal-file-type 'daily)
+    (org-narrow-to-subtree))
+  (goto-char (point-max)))
+
+(setq org-capture-templates '(("j" "Journal entry" plain (function org-journal-find-location)
+                               "** %(format-time-string org-journal-time-format)%^{Title}\n%i%?"
+                               :jump-to-captured t :immediate-finish t)))
 #+end_src
 
 ** beancount
